Add jscroot for user authentication

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>This sites is under developed</p>
 
     <script src="assets/js/title.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
