Add navigation bar

--- a/index.html
+++ b/index.html
@@ -3,13 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>idBiz.</title>
+
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 <body>
-    <h1>Welcome!</h1>
-    <p>This sites is under developed</p>
+    <div class="nav-contaier">
+        <nav>
+            <div class="prof-sect">
+                <img src="" alt="" class="ppict">
+                <p>Username</p>
+            </div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li>
+                    <div class="srch">
+                        <input type="search" name="" id="">
+                        <i class="ph ph-magnifying-glass"></i>
+                    </div>
+                </li>
+                <li><a href="about.html">History</a></li>
+            </ul>
+        </nav>
+    </div>
 
-    <script src="assets/js/title.js"></script>
-    <script src="main.js"></script>
+    <!-- <script src="assets/js/title.js"></script> -->
+    <!-- <script type="module" src="main.js"></script> -->
 </body>
 </html>
