add module script

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
     </div>
 
-    <!-- <script src="assets/js/title.js"></script> -->
-    <!-- <script type="module" src="main.js"></script> -->
+    <script src="assets/js/title.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
