Fix user API URL in config and update HTML element for username display

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="prof-sect">
                 <img src="" alt="" class="ppict">
-                <p>Username</p>
+                <p id="name">Username</p>
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
