Remove dropdown.js script and clean up index.html by eliminating unused logout functionality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="prof-sect">
                 <img src="./assets/images/person.jpg" alt="Profile Picture" class="ppict">
-                <p id="name" class="username">Username</p>
+                <p id="name">Username</p>
                 <div class="dropdown">
                     <button class="dropbtn"><i class="ph ph-caret-down"></i></button>
                     <div class="dropdown-content">
@@ -42,7 +42,6 @@
     
 
     <script src="./assets/js/burger.js"></script>
-    <script src="./assets/js/dropdown.js"></script>
     <script src="./assets/js/logout.js"></script>
     <script type="module" src="main.js"></script>
 </body>
