Add portfolio fetching and rendering

--- a/index.html
+++ b/index.html
@@ -41,110 +41,12 @@
     </div>
     
     <div id="catalogDesain">
-        <div class="catalog">
-            <div class="card">
-                <img src="./assets/images/person.jpg" alt="Desain 1" class="card-img">
-                <div class="card-body">
-                    <h3 class="card-title">Desain 1</h3>
-                    <a href="" class="card-seller">Nama Seller</a>
-                    <p class="card-desc">Deskripsi Desain 1</p>
-                    <button class="card-btn">Detail</button>
-                    <button>Pesan</button>
-                </div>
-            </div>
 
-            <div class="card">
-                <img src="./assets/images/person.jpg" alt="Desain 1" class="card-img">
-                <div class="card-body">
-                    <h3 class="card-title">Desain 1</h3>
-                    <a href="" class="card-seller">Nama Seller</a>
-                    <p class="card-desc">Deskripsi Desain 1</p>
-                    <button class="card-btn">Detail</button>
-                    <button>Pesan</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="./assets/images/person.jpg" alt="Desain 1" class="card-img">
-                <div class="card-body">
-                    <h3 class="card-title">Desain 1</h3>
-                    <a href="" class="card-seller">Nama Seller</a>
-                    <p class="card-desc">Deskripsi Desain 1</p>
-                    <button class="card-btn">Detail</button>
-                    <button>Pesan</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="./assets/images/person.jpg" alt="Desain 1" class="card-img">
-                <div class="card-body">
-                    <h3 class="card-title">Desain 1</h3>
-                    <a href="" class="card-seller">Nama Seller</a>
-                    <p class="card-desc">Deskripsi Desain 1</p>
-                    <button class="card-btn">Detail</button>
-                    <button>Pesan</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="./assets/images/person.jpg" alt="Desain 1" class="card-img">
-                <div class="card-body">
-                    <h3 class="card-title">Desain 1</h3>
-                    <a href="" class="card-seller">Nama Seller</a>
-                    <p class="card-desc">Deskripsi Desain 1</p>
-                    <button class="card-btn">Detail</button>
-                    <button>Pesan</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="./assets/images/person.jpg" alt="Desain 1" class="card-img">
-                <div class="card-body">
-                    <h3 class="card-title">Desain 1</h3>
-                    <a href="" class="card-seller">Nama Seller</a>
-                    <p class="card-desc">Deskripsi Desain 1</p>
-                    <button class="card-btn">Detail</button>
-                    <button>Pesan</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="./assets/images/person.jpg" alt="Desain 1" class="card-img">
-                <div class="card-body">
-                    <h3 class="card-title">Desain 1</h3>
-                    <a href="" class="card-seller">Nama Seller</a>
-                    <p class="card-desc">Deskripsi Desain 1</p>
-                    <button class="card-btn">Detail</button>
-                    <button>Pesan</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="./assets/images/person.jpg" alt="Desain 1" class="card-img">
-                <div class="card-body">
-                    <h3 class="card-title">Desain 1</h3>
-                    <a href="" class="card-seller">Nama Seller</a>
-                    <p class="card-desc">Deskripsi Desain 1</p>
-                    <button class="card-btn">Detail</button>
-                    <button>Pesan</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="./assets/images/person.jpg" alt="Desain 1" class="card-img">
-                <div class="card-body">
-                    <h3 class="card-title">Desain 1</h3>
-                    <a href="" class="card-seller">Nama Seller</a>
-                    <p class="card-desc">Deskripsi Desain 1</p>
-                    <button class="card-btn">Detail</button>
-                    <button>Pesan</button>
-                </div>
-            </div>
-        </div>
     </div>
     
     <script src="./assets/js/burger.js"></script>
     <script src="./assets/js/logout.js"></script>
+    <script src="./assets/js/portofolio.js"></script>
     <script type="module" src="main.js"></script>
 </body>
 </html>
