Refactor portfolio fetching and rendering logic with improved error handling and modal functionality

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     
 
     <!-- Container untuk kartu desain -->
-    <div id="cards-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 p-6">
-        <!-- Kartu desain akan muncul di sini -->
+    <div id="cards-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mt-24">
+      <!-- Kartu desain akan muncul di sini -->
     </div>
 
     <!-- Modal Gambar -->
