Add search functionality to portfolio and update image source paths

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><a href="index.html">Catalog</a></li>
                 <li>
                     <div class="srch">
-                        <input type="search" name="" id="" placeholder="Search...">
+                        <input type="search" id="searchInput" placeholder="Search...">
                         <i class="ph ph-magnifying-glass"></i>
                     </div>
                 </li>
