Add notification for recent transactions and update history page styling

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                         <i class="ph ph-magnifying-glass"></i>
                     </div>
                 </li>
-                <li><a href="history.html">History</a></li>
+                <li class="history-notification">
+                  <a href="history.html">History</a>
+                  <span class="notification-badge"></span>
+                </li>
             </ul>
         </nav>
     </div>
@@ -190,6 +193,7 @@
       <script src="./assets/js/burger.js"></script>
       <script src="./assets/js/logout.js"></script>
 
+      <script src="./assets/js/notif.js"></script>
       <script src="./assets/js/portofolio.js"></script>
 
 </body>
